<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racing_control</name>
  <version>2.0.0</version>
  <description>racing control</description>
  <maintainer email="nuo.wu@horizon.cc">nuo.wu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dnn_node</depend>
  <depend>std_msgs</depend>
  <depend>hbm_img_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ai_msgs</depend>

  <exec_depend>hobot_codec</exec_depend>
  <exec_depend>websocket</exec_depend>
  <exec_depend>tros_racing_obstacle_detection_yolo</exec_depend>
  <exec_depend>tros_racing_track_detection_resnet</exec_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>